# blockchain

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Heap.h  Proyecto.docx  README.md  blockchain.c  cmake_build  cmake_build.sh  debug.txt  sha-256.c  sha-256.h  test.cpp
.cache/clangd/index/: BlockChain.cpp.5866FBD283F70C20.idx  BlockChain.hpp.BCD2C383550F3F2E.idx  main.cpp.EB46DF7BC298DEC3.idx
.github/workflows/: cmake.yml  static.yml
Readme/: api.yaml
Readme/Docs/: index.html  swagger.json  swagger.yaml
Readme/Docs/html2/: index.html
include/: App.hpp
include/Api/: Api.hpp
include/Array/: Array.hpp
include/BlockChain/: BlockChain.hpp  Data.hpp  prueba.hpp
include/BlockChain/Credit/: Credit.hpp
include/BlockChain/IndexStructures/: IndexStructures.hpp
include/BlockChain/IndexStructures/AVL/: AVL.cpp  AVL.hpp  avl.hpp  node.hpp
include/BlockChain/IndexStructures/B/: B.hpp
include/BlockChain/IndexStructures/B+/: B+.hpp
include/BlockChain/IndexStructures/BST/: BST.hpp
include/BlockChain/IndexStructures/BST/OLD/: bst.hpp  node.hpp
include/BlockChain/IndexStructures/Heap/: Heap.hpp
include/BlockChain/IndexStructures/Suffix/: Suffix.hpp
include/BlockChain/Person/: ClientDict.hpp  Person.hpp  PersonsHash.hpp  tmp.cpp
include/BlockChain/SearchStructures/: SearchStructureBase.hpp
include/BlockChain/SearchStructures/AVL/: AVL.hpp  HeightBalancedTree.h
include/BlockChain/SearchStructures/BST/: bst.hpp  iterator.hpp
include/BlockChain/SearchStructures/Heap/: Heap.hpp
include/Set/: Set.hpp
include/Utils/: SHA256.hpp
include/Utils/Array/: Array.hpp
include/Utils/B+/: B+.hpp  nodeB+.hpp
include/Utils/Bst/: bst.hpp
include/Utils/Deque/: Deque.hpp  DequeIterator.hpp  Deque_Prototipo.hpp  Iterator.hpp
include/Utils/Deque/old/: Deque.hpp  DequeIterator.hpp
include/Utils/ForwardList/: ForwardList.hpp
include/Utils/RBTree/: RBTree.hpp
include/Utils/RadixTrie/: RadixTrie.hpp
include/Utils/Set/: Set.hpp
include/Utils/Stack/: Stack.hpp
include/Utils/Vector/: Vector.hpp
libs/Array/: Array.hpp
libs/BlockChain/: BlockChain.hpp  CMakeLists.txt
libs/Deque/: Deque.hpp
libs/Queue/: Queue.hpp
src/: CMakeLists.txt  importance.txt  main.cpp  test.cpp
src/Api/: Api.cpp  CMakeLists.txt
src/Array/: Array.cpp
src/BlockChain/: BlockChain.cpp  CMakeLists.txt  Data.cpp  tmp.r
src/BlockChain/IndexStructures/BST/: BST.cpp  BST.hpp
src/BlockChain/Person/: ClientDict.cpp  Person.cpp
src/Utils/: CMakeLists.txt  ForwardList.cpp
src/Utils/Array/: Array.cpp
src/Utils/Deque/: Deque.cpp  Deque.hpp
src/Utils/ForwardList/: ForwardList.cpp
src/Utils/RadixTrie/: RadixTrie.cpp
src/Utils/Vector/: Vector.cpp
testing/: CMakeLists.txt  CMakeLists.txt.old  main.cpp
testing/.cache/clangd/index/: main.cpp.504F209F4339368E.idx
testing/openssl/: main.cpp
testing/qt/: hello  main.cpp
